<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:text="@string/autoStop" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/autoStopValue"
            android:inputType="number"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/intEight" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoStopInstruction"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="autoStopOnButton"
            android:text="@string/on"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="autoStopOffButton"
            android:text="@string/off"/>
    </LinearLayout>

</LinearLayout>