<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/settingsParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoStopColon"
                />
            <TextView
                android:id="@+id/autoStopDisplayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setAutoStop"
            android:text="@string/autoStop"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopTimer"
            android:text="@string/Stop"
            />
        <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/current"/>
                -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/currentSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noTempo"/>
            <TextView
                android:id="@+id/currentTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noTempo"/>
        </LinearLayout>


    </LinearLayout>


    <!--
    TODO: change this ScrollView / LinnearLayout to a ListView!
    -->
    <ScrollView
        android:id="@+id/scrollList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/songParent"
                android:orientation="vertical" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addNewSong"
                android:text="@string/newSong"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editInstructions"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>