<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:gravity="center">


    <TextView
        android:id="@+id/addSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/addSong"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/songName"
            />
        <EditText
            android:id="@+id/addSongName"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/bpm"/>
        <EditText
            android:id="@+id/addSongTempo"
            android:layout_width="fill_parent"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/timeSignature"/>
        <TextView
            android:id="@+id/addSongTimesignature"
            android:layout_width="wrap_content"
            android:text="4"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RadioGroup
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/addSongTimesignatureRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="3"/>
            <RadioButton
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="4"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/addSongTimesignatureRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="5"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="6"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="7"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addSongCheckTimesignatureNumber"
                android:text="8"/>
        </LinearLayout>
    </RadioGroup>
</LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/addSongId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newSongSave"
            android:text="@string/saveSong"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newSongCancel"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/addSongDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:onClick="newSongDelete"
            android:text="@string/delete"/>

    </LinearLayout>
</LinearLayout>